# Light-Mapping

./: .gitignore.txt  CMakeLists.txt  LightMapTutorial.sln  README.md  controls.txt  vcpkg.json
Debug/: LightMapTutorial.ilk
LightMapTutorial/: Game.cpp  Game.h  HUD.cpp  HUD.h  LightMapTutorial.vcxproj  LightMapTutorial.vcxproj.filters  MetalBoxLightMapAdvanced.psd  SceneObjects.cpp  SceneObjects.h  Skybox.cpp  Utilities.cpp  rt3d.cpp  rt3d.h  textured.vert
LightMapTutorial/Debug/: vc141.idb
LightMapTutorial/Debug/LightMapTutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LightMapTutorial.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LightMapTutorial/x64/Debug/: vc141.idb
LightMapTutorial/x64/Debug/LightMapTutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
assets/materials/: MetalBoxLightMap.psd
assets/town-skybox/: Town_Up.tga
headers/: Camera.h  HUD.h  Lights.h  Skybox.h  Utilities.h  rt3d.h
shaders/fragment/: cubemap.frag  lightmap.frag  phong-tex.frag  textured.frag
shaders/vertex/: cubemap.vert  lightmap.vert  phong-tex.vert
source/: Camera.cpp  Game.cpp  HUD.cpp  Lights.cpp  SceneObjects.cpp  Skybox.cpp  Utilities.cpp  main.cpp
